fix: removed extra space as per figma

--- a/apps/gauzy/src/app/@shared/faq/faq.component.scss
+++ b/apps/gauzy/src/app/@shared/faq/faq.component.scss
@@ -5,7 +5,6 @@
   padding: 20px;
   background: rgba(245, 109, 88, 0.05);
   border-radius: nb-theme(border-radius);
-  height: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
